# file2image

./: .gitignore  README.md  pyproject.toml
src/file2image/: __init__.py  __main__.py  converter.py  server.py
